add styling and video for homepage

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
     </header>
     <!-- section for about me-->
     <main id="logosection">
-      <div class="pblogo">
+      <div class="pblogo" style="background-color: #1d3557">
         <img src="./assets/img/DUBB.png" class="logo" alt="pamela logo" />
       </div>
       <!-- section for welcome intro-->
-      <div id="intro">
+      <div id="intro" style="padding: 10px">
         <h3>Welcome to my Portfolio!</h3>
       </div>
       <div>
