--- a/myprojects.html
+++ b/myprojects.html
@@ -45,7 +45,7 @@
             <li>
               <a
                 class="fas fa-file-download"
-                href="./assets/CV/Pamela Dubb CV2.pdf"
+                href="./assets/cv/Pamela Dubb Cv WebDev 2.pdf"
                 target="_blank"
               >
                 CV
@@ -57,14 +57,52 @@
     </header>
     <!-- section for about me-->
     <main>
+      <section id="projectslides">
+        <!-- Slideshow container -->
+        <div class="slideshow-container">
+          <!-- Full-width images with number and caption text -->
+          <div class="mySlides fade">
+            <div class="numbertext">1 / 3</div>
+            <img src="./assets/img/desktop1.png" style="width: 100%" />
+            <div class="text">Travel Companion || Project 1 </div>
+          </div>
 
+          <div class="mySlides fade">
+            <div class="numbertext">2 / 3</div>
+            <img src="./assets/img/desktop3.png" style="width: 100%" />
+            <div class="text">Travel Companion || Travel App </div>
+          </div>
+
+          <div class="mySlides fade">
+            <div class="numbertext">3 / 3</div>
+            <img src="./assets/img/all-meals.png" style="width: 100%" />
+            <div class="text">Dish Up || Project 2</div>
+          </div>
+
+          <div class="mySlides fade">
+            <div class="numbertext">3 / 3</div>
+            <img src="./assets/img/mealplan.png" style=  "width: 100%" />
+            <div class="text">Dish Up || Meal Prep App</div>
+          </div>
+          <!-- Next and previous buttons -->
+          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+          <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        </div>
+        <br />
+        <!-- The dots/circles -->
+        <div style="text-align: center">
+          <span class="dot" onclick="currentSlide(1)"></span>
+          <span class="dot" onclick="currentSlide(2)"></span>
+          <span class="dot" onclick="currentSlide(3)"></span>
+        </div>
+      </section>
 
 
 
        <!-- semantic ui project cards -->
        <div class="ui special centered cards">
 
-         <!-- semantic ui horisen project card -->
+         <!-- semantic ui notetaker project card -->
          <div class="card">
           <div class="blurring dimmable image">
             <div class="ui dimmer">
@@ -103,7 +141,296 @@
             </a>
           </div>
         </div>
-
+        <!-- semantic ui techblog project card -->
+        <div class="card">
+            <div class="blurring dimmable image">
+              <div class="ui dimmer">
+                <div class="content">
+                  <div class="center">
+                    <div class="ui inverted button">Live Url Link</div>
+                  </div>
+                </div>
+              </div>
+              <img src="./assets/img/editblog.png" id="projectimage" />
+            </div>
+            <div class="content">
+              <a
+                class="header"
+                href="https://pdubb3.github.io/tech-blog-mvc/"
+                target="_blank"
+                >Tech Blog</a
+              >
+              <div class="meta">
+                <span class="description">
+                  In this project, I have built a CMS-style blog site similar to a Wordpress site, where developers can publish their blog posts and comment on other developers' posts as well. The app I have created follows the MVC paradigm in its architectural structure, using Handlebars.js as the templating language, Sequelize as the ORM, and the express-session npm package for authentication.</span
+                >
+              </div>
+            </div>
+            <!-- semantic ui button wit weather dashboard github link attached -->
+            <div class="ui bottom attached button" id="gitrepo">
+              <a
+                href="https://github.com/PDUBB3/tech-blog-mvc"
+                target="_blank"
+              >
+                <i class="github icon"></i>
+                Git Repo Link
+              </a>
+            </div>
+        </div>
+        <!-- semantic ui e-commerce back end project card -->
+        <div class="card">
+          <div class="blurring dimmable image">
+            <div class="ui dimmer">
+              <div class="content">
+                <div class="center">
+                  <div class="ui inverted button">Live Url Link</div>
+                </div>
+              </div>
+            </div>
+            <img src="./assets/img/ecommerce.JPG" id="projectimage" />
+          </div>
+          <div class="content">
+            <a
+              class="header"
+              href="https://pdubb3.github.io/ecommerce-back-end/"
+              target="_blank"
+              >E-commerce Back End</a
+            >
+            <div class="meta">
+              <span class="description">
+                In this project, a back end for an e-commerce site has been built by modifying starter code. Express.js API has been used to use sequelize to interact with a MySQL database.>
+            </div>
+          </div>
+          <!-- semantic ui button wit ecommerce back end github link attached -->
+          <div class="ui bottom attached button" id="gitrepo">
+            <a
+              href="https://github.com/PDUBB3/ecommerce-back-end"
+              target="_blank"
+            >
+              <i class="github icon"></i>
+              Git Repo Link
+            </a>
+          </div>
+        </div>
+        <!-- semantic ui travel companion project card -->
+        <div class="card">
+          <div class="blurring dimmable image">
+            <div class="ui dimmer">
+              <div class="content">
+                <div class="center">
+                  <div class="ui inverted button">Live Url Link</div>
+                </div>
+              </div>
+            </div>
+            <img src="./assets/img/desktop1.png" id="projectimage" />
+          </div>
+          <div class="content">
+            <!-- link to live url for project from header-->
+            <a
+              class="header"
+              href="https://PDUBB3.github.io/travel-app/"
+              target="_blank"
+              >Travel Companion</a
+            >
+            <div class="meta">
+              <span class="description">
+                In this project, I have created a travel app which allows the
+                user to find information about the countries of the world it
+                includes information such as, language spoken, currency
+                converter, vaccines and places to see. Skills used: HTML
+                layout, CSS styling, Semantic UI Framework, Javascript,
+                jQuery.</span
+              >
+            </div>
+          </div>
+          <!-- semantic ui button wit travel app github link attached -->
+          <div class="ui bottom attached button" id="gitrepo">
+            <a href="https://github.com/PDUBB3/travel-app" target="_blank">
+              <i class="github icon"></i>
+              Git Repo Link
+            </a>
+          </div>
+        </div>
+        <!-- semantic ui employee tracker project card -->
+        <div class="card">
+          <div class="blurring dimmable image">
+            <div class="ui dimmer">
+              <div class="content">
+                <div class="center">
+                  <div class="ui inverted button">Live Url Link</div>
+                </div>
+              </div>
+            </div>
+            <img src="./assets/img/employeetracker.png" id="projectimage" />
+          </div>
+          <div class="content">
+            <a
+              class="header"
+              href="https://pdubb3.github.io/employee-tracker/"
+              target="_blank"
+              >Employee Tracker</a
+            >
+            <div class="meta">
+              <span class="description">
+                In this project, I have built a solution for managing a company's employees using node, inquirer and MySQL. I have designed a database schema containing three tables#; employee, role and department for the company so the user can organize and plan their business.>
+            </div>
+          </div>
+          <!-- semantic ui button wit employee tracker github link attached -->
+          <div class="ui bottom attached button" id="gitrepo">
+            <a
+              href="https://github.com/PDUBB3/employee-tracker"
+              target="_blank"
+            >
+              <i class="github icon"></i>
+              Git Repo Link
+            </a>
+          </div>
+        </div>
+        <!-- semantic ui weather dashboard project card -->
+        <div class="card">
+            <div class="blurring dimmable image">
+              <div class="ui dimmer">
+                <div class="content">
+                  <div class="center">
+                    <div class="ui inverted button">Live Url Link</div>
+                  </div>
+                </div>
+              </div>
+              <img src="./assets/img/weatherdashboard.png" id="projectimage" />
+            </div>
+            <div class="content">
+              <a
+                class="header"
+                href="https://pdubb3.github.io/weather-dashboard/"
+                target="_blank"
+                >Weather Dashboard</a
+              >
+              <div class="meta">
+                <span class="description">
+                  In this project, I have created a weather dashboard using an
+                  API, which allows weather data for the next 5 days to be
+                  retrieved and displayed onto the dashboard once a city is
+                  searched by the user via the search bar. Skills used: HTML
+                  layout, Javascript, CSS styling, Web API</span
+                >
+              </div>
+            </div>
+            <!-- semantic ui button wit weather dashboard github link attached -->
+            <div class="ui bottom attached button" id="gitrepo">
+              <a
+                href="https://github.com/PDUBB3/weather-dashboard"
+                target="_blank"
+              >
+                <i class="github icon"></i>
+                Git Repo Link
+              </a>
+            </div>
+        </div>
+        <!-- semantic ui team profile generator project card -->
+        <div class="card">
+  <div class="blurring dimmable image">
+    <div class="ui dimmer">
+      <div class="content">
+        <div class="center">
+          <div class="ui inverted button">Live Url Link</div>
+        </div>
+      </div>
+    </div>
+    <img src="./assets/img/teamprofile.png" id="projectimage" />
+  </div>
+  <div class="content">
+    <a
+      class="header"
+      href="https://pdubb3.github.io/team-profile-generator/"
+      target="_blank"
+      >Team Profile Generator</a
+    >
+    <div class="meta">
+      <span class="description">
+        In this project, I have build a node.js command line application that takes in information about employees on a software engineering team, then generates a HTML webpage that displays summaries for each person. I have also tested the code by writing a unit test for every part of the code, to ensure the code is maintainable and passes each test.>
+    </div>
+  </div>
+  <!-- semantic ui button wit employee tracker github link attached -->
+  <div class="ui bottom attached button" id="gitrepo">
+    <a
+      href="https://github.com/PDUBB3/team-profile-generator"
+      target="_blank"
+    >
+      <i class="github icon"></i>
+      Git Repo Link
+    </a>
+  </div>
+        </div>
+        <!-- semantic ui read me generator project card -->
+        <div class="card">
+          <div class="blurring dimmable image">
+            <div class="ui dimmer">
+              <div class="content">
+                <div class="center">
+                  <div class="ui inverted button">Live Url Link</div>
+                </div>
+              </div>
+            </div>
+            <img src="./assets/img/read me generator.png" id="projectimage" />
+          </div>
+          <div class="content">
+            <a
+              class="header"
+              href="https://pdubb3.github.io/readme-generator/"
+              target="_blank"
+              >ReadMe Generator</a
+            >
+            <div class="meta">
+              <span class="description">
+                In this project, I have created a command-line application that dynamically generates a professional README file from a users input using the inquirer package and Node.js.>
+            </div>
+          </div>
+          <!-- semantic ui button with read me generator github link attached -->
+          <div class="ui bottom attached button" id="gitrepo">
+            <a
+              href="https://github.com/PDUBB3/readme-generator"
+              target="_blank"
+            >
+              <i class="github icon"></i>
+              Git Repo Link
+            </a>
+          </div>
+        </div>
+        <!-- semantic ui work day schedule project card -->
+        <div class="card">
+          <div class="blurring dimmable image">
+            <div class="ui dimmer">
+              <div class="content">
+                <div class="center">
+                  <div class="ui inverted button">Live Url Link</div>
+                </div>
+              </div>
+            </div>
+            <img src="./assets/img/work-day-schedule.jpg" id="projectimage" />
+          </div>
+          <div class="content">
+            <a
+              class="header"
+              href="https://pdubb3.github.io/work-day-schedule/"
+              target="_blank"
+              >Work Day schedule</a
+            >
+            <div class="meta">
+              <span class="description">
+                In this project, I have created a simple calendar application that allows a user to save events for each hour of the day by modifying starter code. This app runs in the browser and feature dynamically updated HTML and CSS powered by jQuery.>
+            </div>
+          </div>
+          <!-- semantic ui button with work day schedule github link attached -->
+          <div class="ui bottom attached button" id="gitrepo">
+            <a
+              href="https://github.com/PDUBB3/work-day-schedule"
+              target="_blank"
+            >
+              <i class="github icon"></i>
+              Git Repo Link
+            </a>
+          </div>
+        </div>
         <!-- semantic ui horisen project card -->
         <div class="card">
           <div class="blurring dimmable image">
@@ -183,85 +510,6 @@
           <!-- semantic ui button wit quiz github link attached -->
           <div class="ui bottom attached button" id="gitrepo">
             <a href="https://github.com/PDUBB3/code-quiz" target="_blank">
-              <i class="github icon"></i>
-              Git Repo Link
-            </a>
-          </div>
-        </div>
-        <!-- semantic ui travel companion project card -->
-        <div class="card">
-          <div class="blurring dimmable image">
-            <div class="ui dimmer">
-              <div class="content">
-                <div class="center">
-                  <div class="ui inverted button">Live Url Link</div>
-                </div>
-              </div>
-            </div>
-            <img src="./assets/img/travelapp.png" id="projectimage" />
-          </div>
-          <div class="content">
-            <!-- link to live url for project from header-->
-            <a
-              class="header"
-              href="https://natasha-mann.github.io/travel-app/"
-              target="_blank"
-              >Travel Companion</a
-            >
-            <div class="meta">
-              <span class="description">
-                In this project, I have created a travel app which allows the
-                user to find information about the countries of the world it
-                includes information such as, language spoken, currency
-                converter, vaccines and places to see. Skills used: HTML
-                layout, CSS styling, Semantic UI Framework, Javascript,
-                jQuery.</span
-              >
-            </div>
-          </div>
-          <!-- semantic ui button wit travel app github link attached -->
-          <div class="ui bottom attached button" id="gitrepo">
-            <a href="https://github.com/PDUBB3/travel-app" target="_blank">
-              <i class="github icon"></i>
-              Git Repo Link
-            </a>
-          </div>
-        </div>
-        <!-- semantic ui weather dashboard project card -->
-        <div class="card">
-          <div class="blurring dimmable image">
-            <div class="ui dimmer">
-              <div class="content">
-                <div class="center">
-                  <div class="ui inverted button">Live Url Link</div>
-                </div>
-              </div>
-            </div>
-            <img src="./assets/img/weatherdashboard.png" id="projectimage" />
-          </div>
-          <div class="content">
-            <a
-              class="header"
-              href="https://pdubb3.github.io/weather-dashboard/"
-              target="_blank"
-              >Weather Dashboard</a
-            >
-            <div class="meta">
-              <span class="description">
-                In this project, I have created a weather dashboard using an
-                API, which allows weather data for the next 5 days to be
-                retrieved and displayed onto the dashboard once a city is
-                searched by the user via the search bar. Skills used: HTML
-                layout, Javascript, CSS styling, Web API</span
-              >
-            </div>
-          </div>
-          <!-- semantic ui button wit weather dashboard github link attached -->
-          <div class="ui bottom attached button" id="gitrepo">
-            <a
-              href="https://github.com/PDUBB3/weather-dashboard"
-              target="_blank"
-            >
               <i class="github icon"></i>
               Git Repo Link
             </a>
