--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>|| Pamela Dubb || </title>
+    <title>|| Pamela Dubb ||</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link
       rel="stylesheet"
@@ -58,10 +58,10 @@
       <div id="intro" style="padding: 10px">
         <h3>Welcome to my Portfolio!</h3>
       </div>
-      <div>
+      <div style="text-align: center">
         <iframe
-          height="400"
-          width="480"
+          height="420"
+          width="420"
           src="./assets/img/portfoliovid.mp4"
         ></iframe>
       </div>
