--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <li>
               <a
                 class="fas fa-file-download"
-                href="./assets/cv/Pamela Dubb Cv WebDev 2.pdf"
+                href="./assets/cv/PamelaDCV.pdf"
                 target="_blank"
               >
                 CV
