--- a/contactme.html
+++ b/contactme.html
@@ -68,7 +68,7 @@
             <li>
               <a
                 class="fas fa-file-download"
-                href="./assets/cv/Pamela Dubb Cv WebDev 2.pdf"
+                href="./assets/cv/PamelaDCV.pdf"
                 target="_blank"
               >
                 CV
