--- a/contactme.html
+++ b/contactme.html
@@ -84,7 +84,7 @@
         <img src="./assets/img/DUBB.png" class="logo" alt="pamela logo" />
       </div>
       <section class="contactme">
-        <div>
+        <div id="email">
           <h3 class="section-description pt-4">Get in touch!</h3>
           <p>Email: Pamela.bhopal@icloud.com</p>
         </div>
