--- a/contactme.html
+++ b/contactme.html
@@ -84,18 +84,18 @@
         <img src="./assets/img/DUBB.png" class="logo" alt="pamela logo" />
       </div>
       <section class="contactme">
-        <div id="email">
+        <div style="text-align: center">
           <h3 class="section-description pt-4">Get in touch!</h3>
           <p>Email: Pamela.bhopal@icloud.com</p>
+          <button class="ui button">
+            <a
+              href="./assets/cv/PamelaDCV.pdf"
+              download="PamelaDubbCV"
+              role="button"
+              ><i class="fas fa-file-download px-2"></i> Download CV</a
+            >
+          </button>
         </div>
-        <button class="ui button">
-          <a
-            href="./assets/cv/PamelaDCV.pdf"
-            download="PamelaDubbCV"
-            role="button"
-            ><i class="fas fa-file-download px-2"></i> Download CV</a
-          >
-        </button>
         <div id="contactme" class="contactme">
           <!--section for clickable url to socials icons-->
           <ul>
